--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "next": "^12.3.0",
+    "prisma": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
