--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,10 @@
 # Keep environment variables out of version control
 .env
 
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 **.rest
