--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.2.1",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.1",
     "next": "^12.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
