--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.2.1",
+    "debug": "^4.3.4",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.1",
     "next": "^12.3.0",
