--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mongoose": "^6.6.1",
     "next": "^12.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0"
   },
   "scripts": {
     "dev": "next dev"
