--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 .DS_Store
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.production
 **.rest
