--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-    "name": "menus-prototype-next",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "debug": "^4.3.4",
-        "mongodb": "^4.10.0",
-        "mongoose": "^6.6.1",
-        "next": "^12.3.0",
-        "next-themes": "^0.2.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-icons": "^4.4.0"
-    },
-    "scripts": {
-        "dev": "next dev"
-    },
-    "devDependencies": {
-        "autoprefixer": "^10.4.12",
-        "postcss": "^8.4.16",
-        "tailwindcss": "^3.1.8"
-    }
+  "name": "menus-prototype-next",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "bootstrap": "^5.2.1",
+    "debug": "^4.3.4",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.1",
+    "next": "^12.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0"
+  },
+  "scripts": {
+    "dev": "next dev"
+  }
 }
