--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,4 @@ REVALIDATION_SECRET=wQKFemC8TZPDRhBN5aK6
 SESSION_EXP_MS=7200000
 CSRF_BYTES=16
 SESSION_BYTES=32
-DEBUG=*
+DEBUG=*,-send,-compression,-next:*,-stream-parser
