changed username, password validation to env vars

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,8 @@ SESSION_EXP_MS=7200000
 CSRF_BYTES=16
 SESSION_BYTES=32
 DEBUG=*,-send,-compression,-next:*,-stream-parser
+
+NEXT_PUBLIC_MIN_USERNAME=3
+NEXT_PUBLIC_MAX_USERNAME=10
+NEXT_PUBLIC_MIN_PASSWORD=5
+NEXT_PUBLIC_MAX_PASSWORD=18
