--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ REVALIDATION_SECRET=[secret for revalidation]
 SESSION_EXP_MS=[session token lifespan in ms (number of ms the session token is valid)]
 CSRF_BYTES=[number of bytes in csrf token]
 SESSION_BYTES=[number of bytes in session token]
+
+NEXT_PUBLIC_MIN_USERNAME=[min length of username]
+NEXT_PUBLIC_MAX_USERNAME=[max length of username]
+NEXT_PUBLIC_MIN_PASSWORD=[min length of password]
+NEXT_PUBLIC_MAX_PASSWORD=[max length of password]
