--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ REVALIDATION_SECRET=[secret for revalidation]
 SESSION_EXP_MS=[session token lifespan in ms (number of ms the session token is valid)]
 CSRF_BYTES=[number of bytes in csrf token]
 SESSION_BYTES=[number of bytes in session token]
+EMAIL=[email used to send messages to users]
+EMAIL_PASSWORD=[password for the email]
 
 NEXT_PUBLIC_MIN_USERNAME=[min length of username]
 NEXT_PUBLIC_MAX_USERNAME=[max length of username]
