--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,7 @@ SESSION_BYTES=32
 DEBUG=*,-send,-compression,-next:*,-stream-parser
 EMAIL=menus.noreplay@gmail.com
 EMAIL_PASSWORD=rdlzczlvwhgefxzg
+RESET_PSW_EXP_MS=120000
 
 NEXT_PUBLIC_MIN_USERNAME=3
 NEXT_PUBLIC_MAX_USERNAME=10
