--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ CSRF_BYTES=[number of bytes in csrf token]
 SESSION_BYTES=[number of bytes in session token]
 EMAIL=[email used to send messages to users]
 EMAIL_PASSWORD=[password for the email]
+RESET_PSW_EXP_MS=[reset password token lifespan in ms (like SESSION_EXP_MS)]
 
 NEXT_PUBLIC_MIN_USERNAME=[min length of username]
 NEXT_PUBLIC_MAX_USERNAME=[max length of username]
