--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
         "dev": "next dev"
     },
     "devDependencies": {
+        "@types/react": "18.0.21",
         "autoprefixer": "^10.4.12",
         "postcss": "^8.4.16",
-        "tailwindcss": "^3.1.8"
+        "tailwindcss": "^3.1.8",
+        "typescript": "4.8.4"
     }
 }
