--- a/package.json
+++ b/package.json
@@ -14,13 +14,24 @@
         "react-icons": "^4.4.0"
     },
     "scripts": {
-        "dev": "next dev"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "test:unit": "npx tsc --outDir testBuild --noEmit false --allowJs true --module commonjs & jest"
     },
     "devDependencies": {
+        "@types/node": "^18.11.3",
         "@types/react": "18.0.21",
+        "@types/react-dom": "^18.0.6",
         "autoprefixer": "^10.4.12",
+        "dotenv": "^16.0.3",
+        "jest": "^29.2.1",
         "postcss": "^8.4.16",
+        "supertest": "^6.3.0",
         "tailwindcss": "^3.1.8",
         "typescript": "4.8.4"
+    },
+    "engines": {
+        "node": ">=17.9.0"
     }
 }
