add contract (backend, frontend) prototype

--- a/.env.development
+++ b/.env.development
@@ -12,3 +12,5 @@ NEXT_PUBLIC_MIN_USERNAME=3
 NEXT_PUBLIC_MAX_USERNAME=10
 NEXT_PUBLIC_MIN_PASSWORD=5
 NEXT_PUBLIC_MAX_PASSWORD=18
+
+ANALYZE=true yarn build
