--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@next/bundle-analyzer": "^13.0.0",
         "debug": "^4.3.4",
         "mongodb": "^4.10.0",
         "mongoose": "^6.6.1",
@@ -11,7 +12,8 @@
         "nodemailer": "^6.8.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-icons": "^4.4.0"
+        "react-icons": "^4.4.0",
+        "zod": "^3.19.1"
     },
     "scripts": {
         "dev": "next dev",
