--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
         "build": "next build",
         "start": "next start",
         "ts:dev": "npx tsc --watch --noEmit --incremental",
-        "test:unit": "npx tsc --outDir testBuild --noEmit false --allowJs true --module commonjs & jest"
+        "test:unit": "jest"
     },
     "devDependencies": {
+        "@types/jest": "^29.2.1",
         "@types/node": "^18.11.3",
         "@types/react": "18.0.21",
         "@types/react-dom": "^18.0.6",
