--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@contract/*": ["lib/contract/*"],
+      "@lib/*": ["lib/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
