--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "postcss": "^8.4.16",
         "supertest": "^6.3.0",
         "tailwindcss": "^3.1.8",
+        "ts-jest": "^29.0.3",
         "typescript": "4.8.4"
     },
     "engines": {
