--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "devDependencies": {
         "@types/jest": "^29.2.1",
         "@types/node": "^18.11.3",
+        "@types/nodemailer": "^6.4.6",
         "@types/react": "18.0.21",
         "@types/react-dom": "^18.0.6",
         "autoprefixer": "^10.4.12",
