--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.4.0",
+        "sharp": "^0.31.2",
         "zod": "^3.19.1"
     },
     "scripts": {
