--- a/package.json
+++ b/package.json
@@ -1,44 +1,46 @@
 {
-    "name": "menus-prototype-next",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@next/bundle-analyzer": "^13.0.0",
-        "debug": "^4.3.4",
-        "mongodb": "^4.10.0",
-        "mongoose": "^6.6.1",
-        "next": "^12.3.0",
-        "next-themes": "^0.2.1",
-        "nodemailer": "^6.8.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-icons": "^4.4.0",
-        "sharp": "^0.31.2",
-        "zod": "^3.19.1"
-    },
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "ts:dev": "npx tsc --watch --noEmit --incremental",
-        "test:unit": "jest"
-    },
-    "devDependencies": {
-        "@types/jest": "^29.2.1",
-        "@types/node": "^18.11.3",
-        "@types/nodemailer": "^6.4.6",
-        "@types/react": "18.0.21",
-        "@types/react-dom": "^18.0.6",
-        "autoprefixer": "^10.4.12",
-        "dotenv": "^16.0.3",
-        "jest": "^29.2.1",
-        "postcss": "^8.4.16",
-        "supertest": "^6.3.0",
-        "tailwindcss": "^3.1.8",
-        "ts-jest": "^29.0.3",
-        "typescript": "4.8.4"
-    },
-    "engines": {
-        "node": ">=17.9.0"
-    }
+  "name": "menus-prototype-next",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@next/bundle-analyzer": "^13.0.0",
+    "debug": "^4.3.4",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.1",
+    "next": "^12.3.0",
+    "next-themes": "^0.2.1",
+    "nodemailer": "^6.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "sharp": "^0.31.2",
+    "zod": "^3.19.1"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "ts:dev": "npx tsc --watch --noEmit --incremental",
+    "test:unit": "jest",
+    "test:e2e": "playwright test __tests__/e2e/"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.27.1",
+    "@types/jest": "^29.2.1",
+    "@types/node": "^18.11.3",
+    "@types/nodemailer": "^6.4.6",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.12",
+    "dotenv": "^16.0.3",
+    "jest": "^29.2.1",
+    "postcss": "^8.4.16",
+    "supertest": "^6.3.0",
+    "tailwindcss": "^3.1.8",
+    "ts-jest": "^29.0.3",
+    "typescript": "4.8.4"
+  },
+  "engines": {
+    "node": ">=17.9.0"
+  }
 }
