add eslint, prettier config, start sign in with google

--- a/.env.development
+++ b/.env.development
@@ -11,5 +11,7 @@ NEXT_PUBLIC_MIN_USERNAME=3
 NEXT_PUBLIC_MAX_USERNAME=10
 NEXT_PUBLIC_MIN_PASSWORD=5
 NEXT_PUBLIC_MAX_PASSWORD=18
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=470225422678-ccel2up6gc49h6fkgh3aulusrc9b4v6i.apps.googleusercontent.com
+NEXT_PUBLIC_GOOGLE_LOGIN_API=http://localhost:3000/api/auth/login/googleLogin
 
 ANALYZE=true yarn build
