--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ NEXT_PUBLIC_MIN_USERNAME=[min length of username]
 NEXT_PUBLIC_MAX_USERNAME=[max length of username]
 NEXT_PUBLIC_MIN_PASSWORD=[min length of password]
 NEXT_PUBLIC_MAX_PASSWORD=[max length of password]
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=[google client ID for login with google]
+NEXT_PUBLIC_GOOGLE_LOGIN_API=[API route to send user login data after sign in with google]
