--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@next/bundle-analyzer": "^13.0.0",
     "debug": "^4.3.4",
+    "google-auth-library": "^8.7.0",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.1",
     "next": "^12.3.0",
@@ -33,6 +34,7 @@
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.12",
     "dotenv": "^16.0.3",
+    "eslint-plugin-react": "^7.31.11",
     "jest": "^29.2.1",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
