--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-MONGODB_URI="mongodb+srv://menus:Passw0rd@cluster0.qddootl.mongodb.net/test?retryWrites=true&w=majority"
+MONGODB_URI=""
 REVALIDATION_SECRET=wQKFemC8TZPDRhBN5aK6
 SESSION_EXP_MS=7200000
 SESSION_BYTES=32
